parametric test for peaktime

--- a/Analyzer.ipynb
+++ b/Analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "54e9934d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "d2625f38",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "1bc4d401",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "8a0a83ed",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "63b29cb2",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "8f8893eb",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "766c077f",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "dd5ac94d",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "656dda3d",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "9c2ffe53",
    "metadata": {},
    "outputs": [
@@ -460,10 +460,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Galahad\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:801: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
+      "c:\\Users\\1kolb\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:801: RuntimeWarning: The iteration is not making good progress, as measured by the \n",
       " improvement from the last ten iterations.\n",
       "  a, b = optimize.fsolve(func, (1.0, 1.0))\n",
-      "c:\\Users\\Galahad\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:796: RuntimeWarning: invalid value encountered in sqrt\n",
+      "c:\\Users\\1kolb\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\scipy\\stats\\_continuous_distns.py:796: RuntimeWarning: invalid value encountered in sqrt\n",
       "  sk = 2*(b-a)*np.sqrt(a + b + 1) / (a + b + 2) / np.sqrt(a*b)\n"
      ]
     },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "d0358a79",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "id": "5788c3ee",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "fa7e94f9",
    "metadata": {},
    "outputs": [
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "id": "be436fda",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "61b748f7",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "id": "fd505571",
    "metadata": {},
    "outputs": [
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "id": "e21adc51",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "ac07bfb1",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "e5dd7425",
    "metadata": {},
    "outputs": [
@@ -1857,7 +1857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "00f05394",
    "metadata": {},
    "outputs": [
@@ -1939,7 +1939,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
+   "id": "68d62a3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mann-Whitney U test for reactionTime (tone_in_noise vs gap_duration_50, June26, female):\n",
+      "U statistic = 0.00, p-value = 1.0000e-01\n",
+      "Rank-biserial effect strength: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import mannwhitneyu\n",
+    "\n",
+    "df = dfs['RESULTS_MTT_MERGED']\n",
+    "\n",
+    "# Filter for June26 and female only\n",
+    "df_june26_female = df[(df['date'] == 'June26') & (df['sex'] == 'female')]\n",
+    "\n",
+    "# Filter for the two experiments and drop NA\n",
+    "tone_in_noise_rt = df_june26_female[df_june26_female['experiment'] == 'tone_in_noise']['peakValue'].dropna()\n",
+    "offset_ppi_10_rt = df_june26_female[df_june26_female['experiment'] == 'gap_duration_50']['peakValue'].dropna()\n",
+    "\n",
+    "# Mann-Whitney U test\n",
+    "if len(tone_in_noise_rt) > 1 and len(offset_ppi_10_rt) > 1:\n",
+    "    stat, p = mannwhitneyu(tone_in_noise_rt, offset_ppi_10_rt, alternative='two-sided')\n",
+    "    print(f\"Mann-Whitney U test for reactionTime (tone_in_noise vs gap_duration_50, June26, female):\")\n",
+    "    print(f\"U statistic = {stat:.2f}, p-value = {p:.4e}\")\n",
+    "    # Effect strength (rank-biserial)\n",
+    "    n1, n2 = len(tone_in_noise_rt), len(offset_ppi_10_rt)\n",
+    "    eff = 1 - (2 * stat) / (n1 * n2)\n",
+    "    print(f\"Rank-biserial effect strength: {eff:.2f}\")\n",
+    "else:\n",
+    "    print(\"Not enough data for comparison (April16, male).\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c6e3ac",
+   "metadata": {},
+   "source": [
+    "this is **definitely** wrong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "8e447faf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-test for peakValue (tone_in_noise vs gap_duration_50, April16, male):\n",
+      "t statistic = -5.44, p-value = 1.0672e-02\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "df = dfs['RESULTS_MTT_MERGED']\n",
+    "\n",
+    "# Filter for April16 and male only\n",
+    "df_april16_male = df[(df['date'] == 'April16') & (df['sex'] == 'female')]\n",
+    "\n",
+    "# Filter for the two experiments and drop NA\n",
+    "tone_in_noise_vals = df_april16_male[df_april16_male['experiment'] == 'tone_in_noise']['peakValue'].dropna()\n",
+    "gap_duration_50_vals = df_april16_male[df_april16_male['experiment'] == 'gap_duration_50']['peakValue'].dropna()\n",
+    "\n",
+    "# Independent t-test\n",
+    "if len(tone_in_noise_vals) > 1 and len(gap_duration_50_vals) > 1:\n",
+    "    stat, p = ttest_ind(tone_in_noise_vals, gap_duration_50_vals, equal_var=False)\n",
+    "    print(f\"T-test for peakValue (tone_in_noise vs gap_duration_50, April16, male):\")\n",
+    "    print(f\"t statistic = {stat:.2f}, p-value = {p:.4e}\")\n",
+    "    print(p<0.05)\n",
+    "else:\n",
+    "    print(\"Not enough data for comparison (April16, male).\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b55367ea",
+   "metadata": {},
+   "source": [
+    "Woooh!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "445a61af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapiro-Wilk for peakValue | Sex: female, Date: April16 -> stat=0.959, p=5.999e-02\n",
+      "  Distribution is likely normal (fail to reject H0).\n",
+      "  Normal fit R²: 0.024\n",
+      "Shapiro-Wilk for peakValue | Sex: female, Date: June26 -> stat=0.951, p=2.691e-02\n",
+      "  Distribution is NOT normal (reject H0).\n",
+      "  Normal fit R²: -0.090\n",
+      "Shapiro-Wilk for peakValue | Sex: female, Date: May20 -> stat=0.960, p=7.226e-02\n",
+      "  Distribution is likely normal (fail to reject H0).\n",
+      "  Normal fit R²: -0.232\n",
+      "Shapiro-Wilk for peakValue | Sex: male, Date: April16 -> stat=0.970, p=1.909e-01\n",
+      "  Distribution is likely normal (fail to reject H0).\n",
+      "  Normal fit R²: 0.187\n",
+      "Shapiro-Wilk for peakValue | Sex: male, Date: June26 -> stat=0.868, p=2.683e-05\n",
+      "  Distribution is NOT normal (reject H0).\n",
+      "  Normal fit R²: -0.375\n",
+      "Shapiro-Wilk for peakValue | Sex: male, Date: May20 -> stat=0.961, p=7.428e-02\n",
+      "  Distribution is likely normal (fail to reject H0).\n",
+      "  Normal fit R²: -0.114\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro, norm\n",
+    "import numpy as np\n",
+    "\n",
+    "df = dfs['RESULTS_MTT_MERGED']\n",
+    "\n",
+    "for sex in df['sex'].unique():\n",
+    "    for date in df['date'].unique():\n",
+    "        vals = df[(df['sex'] == sex) & (df['date'] == date)]['peakValue'].dropna()\n",
+    "        if len(vals) > 2:\n",
+    "            # Shapiro-Wilk normality test\n",
+    "            stat, p = shapiro(vals)\n",
+    "            print(f\"Shapiro-Wilk for peakValue | Sex: {sex}, Date: {date} -> stat={stat:.3f}, p={p:.3e}\")\n",
+    "            if p < 0.05:\n",
+    "                print(\"  Distribution is NOT normal (reject H0).\")\n",
+    "            else:\n",
+    "                print(\"  Distribution is likely normal (fail to reject H0).\")\n",
+    "            # R² for normal fit\n",
+    "            hist, bin_edges = np.histogram(vals, bins=20, density=True)\n",
+    "            bin_centers = (bin_edges[:-1] + bin_edges[1:]) / 2\n",
+    "            mu, std = norm.fit(vals)\n",
+    "            pdf = norm.pdf(bin_centers, mu, std)\n",
+    "            ss_res = np.sum((hist - pdf) ** 2)\n",
+    "            ss_tot = np.sum((hist - np.mean(hist)) ** 2)\n",
+    "            r2 = 1 - ss_res / ss_tot\n",
+    "            print(f\"  Normal fit R²: {r2:.3f}\")\n",
+    "        else:\n",
+    "            print(f\"Not enough data for Sex: {sex}, Date: {date}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0614ee5",
+   "metadata": {},
+   "source": [
+    "something probably went wrong on June26 <br>\n",
+    "rest is normal, and when tests that assume normality are used, peakValue is significantly different by experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "fc20c51f",
    "metadata": {},
    "outputs": [
@@ -2038,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "id": "acda6c0d",
    "metadata": {},
    "outputs": [
@@ -2118,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "id": "081c1743",
    "metadata": {},
    "outputs": [
@@ -2266,7 +2433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "5aec6b88",
    "metadata": {},
    "outputs": [
@@ -2662,7 +2829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "444c6d5e",
    "metadata": {},
    "outputs": [
