--- a/Analyzer.ipynb
+++ b/Analyzer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 312,
    "id": "a596d287",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 313,
    "id": "d2625f38",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 314,
    "id": "63b29cb2",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 315,
    "id": "0c9ceae7",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 316,
    "id": "7af87d11",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 317,
    "id": "6053ddc3",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 318,
    "id": "353e0f34",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 319,
    "id": "766c077f",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 320,
    "id": "aceecb7c",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,20 @@
       "peakTime        zscore    : p=3.802e-13 NOT normal\n",
       "peakTime        minmax    : p=3.802e-13 NOT normal\n",
       "peakTime        quantile  : p=5.433e-07 NOT normal\n",
-      "peakTime        power     : p=2.021e-07 NOT normal\n"
+      "peakTime        power     : p=2.021e-07 NOT normal\n",
+      "difference      original  : p=2.648e-12 NOT normal\n",
+      "difference      gamma     : p=9.424e-05 NOT normal\n",
+      "difference      weibull   : p=5.974e-07 NOT normal\n",
+      "difference      boxcox    : p=1.701e-02 NOT normal\n",
+      "difference      lognorm   : p=2.221e-04 NOT normal\n",
+      "difference      student_t : p=2.704e-04 NOT normal\n",
+      "difference      yeojohnson: p=1.741e-02 NOT normal\n",
+      "difference      log       : p=2.673e-10 NOT normal\n",
+      "difference      sqrt      : p=2.345e-11 NOT normal\n",
+      "difference      zscore    : p=2.648e-12 NOT normal\n",
+      "difference      minmax    : p=2.648e-12 NOT normal\n",
+      "difference      quantile  : p=1.196e-04 NOT normal\n",
+      "difference      power     : p=1.741e-02 NOT normal\n"
      ]
     },
     {
@@ -738,19 +751,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "difference      original  : p=2.648e-12 NOT normal\n",
-      "difference      gamma     : p=9.424e-05 NOT normal\n",
-      "difference      weibull   : p=5.974e-07 NOT normal\n",
-      "difference      boxcox    : p=1.701e-02 NOT normal\n",
-      "difference      lognorm   : p=2.221e-04 NOT normal\n",
-      "difference      student_t : p=2.704e-04 NOT normal\n",
-      "difference      yeojohnson: p=1.741e-02 NOT normal\n",
-      "difference      log       : p=2.673e-10 NOT normal\n",
-      "difference      sqrt      : p=2.345e-11 NOT normal\n",
-      "difference      zscore    : p=2.648e-12 NOT normal\n",
-      "difference      minmax    : p=2.648e-12 NOT normal\n",
-      "difference      quantile  : p=1.196e-04 NOT normal\n",
-      "difference      power     : p=1.741e-02 NOT normal\n",
       "peakValue       original  : p=7.226e-02 normal\n",
       "peakValue       gamma     : p=3.519e-04 NOT normal\n",
       "peakValue       weibull   : p=6.112e-04 NOT normal\n",
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 321,
    "id": "a6566bf5",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 322,
    "id": "8acd7d7b",
    "metadata": {},
    "outputs": [
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 323,
    "id": "e620ed19",
    "metadata": {},
    "outputs": [
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 324,
    "id": "269c2c32",
    "metadata": {},
    "outputs": [
@@ -2443,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 325,
    "id": "afd09866",
    "metadata": {},
    "outputs": [
@@ -2543,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 326,
    "id": "731ebc7b",
    "metadata": {},
    "outputs": [
