some plots and notes

--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +78,9 @@
     "\n",
     "include_decay_fit = False # - - - - - - - - - - - - - - - - - - - - - -  include regular exponential decay in the output\n",
     "\n",
-    "replace = True # - - - - - - - - - - - - - - - - - - - - - - - - - - -  replace last output instead of making a new one\n",
+    "replace = False # - - - - - - - - - - - - - - - - - - - - - - - - - - -  replace last output instead of making a new one\n",
     "\n",
-    "output = True # - - - - - - - - - - - - - - - - - - - - - - - - - - - -  output results; set to False for testing if you do not want any change in output files when running the notebook\n",
+    "output = False # - - - - - - - - - - - - - - - - - - - - - - - - - - - -  output results; set to False for testing if you do not want any change in output files when running the notebook\n",
     "\n",
     "detection_threshold = 24 # - - - - - - - - - - - - - - - - - - - - - - - threshold multiplier for detecting peaks, ValueG has to exceed k times the background noise per animal\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +370,16 @@
       "Collected background noise for 6 animals:\n",
       "{'Animal10': 0.42, 'Animal15': 1.04, 'Animal1': 0.51, 'Animal2': 0.45, 'Animal4': 0.58, 'Animal6': 0.42}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' \\n# ...existing code...\\n\\n# Mean noise across repetitions per experiment per animal\\nanimal_noise_mean = {}\\nfor animal, exp_dict in animal_noise_results.items():\\n    animal_noise_mean[animal] = {}\\n    for exp, noise_list in exp_dict.items():\\n        animal_noise_mean[animal][exp] = float(np.mean(noise_list))\\n\\n# Mean noise across experiments per animal\\nanimal_noise = {}\\nfor animal, exp_dict in animal_noise_mean.items():\\n    all_exp_values = list(exp_dict.values())\\n    if all_exp_values:\\n        animal_noise[animal] = round(float(np.mean(all_exp_values)), 2)\\n    else:\\n        animal_noise[animal] = None\\n\\nif verbose:\\n    print(f\"Collected background noise for {len(animal_noise)} animals (mean):\")\\n    print(animal_noise)\\n# ...existing code... '"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -439,12 +449,36 @@
     "\n",
     "if verbose:\n",
     "    print(f\"Collected background noise for {len(animal_noise)} animals:\")\n",
-    "    print(animal_noise)\n"
+    "    print(animal_noise)\n",
+    "\n",
+    "\"\"\" \n",
+    "# ...existing code...\n",
+    "\n",
+    "# Mean noise across repetitions per experiment per animal\n",
+    "animal_noise_mean = {}\n",
+    "for animal, exp_dict in animal_noise_results.items():\n",
+    "    animal_noise_mean[animal] = {}\n",
+    "    for exp, noise_list in exp_dict.items():\n",
+    "        animal_noise_mean[animal][exp] = float(np.mean(noise_list))\n",
+    "\n",
+    "# Mean noise across experiments per animal\n",
+    "animal_noise = {}\n",
+    "for animal, exp_dict in animal_noise_mean.items():\n",
+    "    all_exp_values = list(exp_dict.values())\n",
+    "    if all_exp_values:\n",
+    "        animal_noise[animal] = round(float(np.mean(all_exp_values)), 2)\n",
+    "    else:\n",
+    "        animal_noise[animal] = None\n",
+    "\n",
+    "if verbose:\n",
+    "    print(f\"Collected background noise for {len(animal_noise)} animals (mean):\")\n",
+    "    print(animal_noise)\n",
+    "# ...existing code... \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -596,13 +630,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Animal thresholds for reaction time: {'Animal10': 2.52, 'Animal15': 6.24, 'Animal1': 3.06, 'Animal2': 2.7, 'Animal4': 3.4799999999999995, 'Animal6': 2.52}\n",
-    "Animal thresholds for detection: {'Animal10': 10.08, 'Animal15': 24.96, 'Animal1': 12.24, 'Animal2': 10.8, 'Animal4': 13.919999999999998, 'Animal6': 10.08}"
+    "With mean: <br>\n",
+    "Animal thresholds for reaction time: {'Animal10': 3.06, 'Animal15': 8.64, 'Animal1': 3.4799999999999995, 'Animal2': 2.94, 'Animal4': 4.14, 'Animal6': 3.0} <br>\n",
+    "Animal thresholds for detection: {'Animal10': 12.24, 'Animal15': 34.56, 'Animal1': 13.919999999999998, 'Animal2': 11.76, 'Animal4': 16.56, 'Animal6': 12.0}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -633,14 +668,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Animal4': 0.94, 'Animal6': 0.95, 'Animal15': 0.89, 'Animal10': 0.94, 'Animal1': 0.94, 'Animal2': 0.95}\n"
+      "{'Animal10': 0.94, 'Animal1': 0.94, 'Animal15': 0.89, 'Animal4': 0.94, 'Animal2': 0.95, 'Animal6': 0.95}\n"
      ]
     }
    ],
@@ -667,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,17 +1253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved results to: Peakfinder Results\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if output:\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
