--- a/Tester.ipynb
+++ b/Tester.ipynb
@@ -730,49 +730,41 @@
    "id": "f8e34fda",
    "metadata": {},
    "source": [
-    "## Summary of Sex Differences by Date (Non-parametric Tests)\n",
+    "## Summary of Sex Differences by Date (Significant Results Only, Non-parametric Tests)\n",
     "\n",
     "All results use the **Mann-Whitney U test** for sex differences and **Dunn's post hoc** for pairwise comparison.  \n",
     "Effect strength is rank-biserial correlation (positive = higher in males, negative = higher in females).  \n",
     "Mean difference is (male mean - female mean).\n",
     "\n",
-    "| Date     | Variable      | Stat    | p-value    | Significant | Effect Strength | Dunn p      | Mean Diff   |\n",
-    "|----------|--------------|---------|------------|-------------|-----------------|-------------|-------------|\n",
-    "| April16  | reactionTime | 574.5   | 4.73e-08   | True        | 0.61            | 4.65e-08    | -1.05       |\n",
-    "| April16  | peakTime     | 1702.0  | 0.122      | False       | -0.17           | 0.121       | 0.73        |\n",
-    "| April16  | difference   | 2104.0  | 6.94e-05   | True        | -0.44           | 6.86e-05    | 1.78        |\n",
-    "| April16  | peakValue    | 2881.0  | 2.32e-18   | True        | -0.98           | 2.26e-18    | 61.08       |\n",
-    "| April16  | PTPA         | 2877.0  | 2.88e-18   | True        | -0.97           | 2.81e-18    | 60.20       |\n",
-    "| April16  | PTTA         | 2885.0  | 1.87e-18   | True        | -0.98           | 1.82e-18    | 55.28       |\n",
-    "| April16  | RMS          | 2872.0  | 3.78e-18   | True        | -0.97           | 3.68e-18    | 25.17       |\n",
-    "| April16  | tau          | 554.0   | 2.83e-08   | True        | 0.62            | 2.78e-08    | -21.62      |\n",
-    "| April16  | AUC          | 2802.0  | 1.52e-16   | True        | -0.92           | 1.48e-16    | 5809.32     |\n",
-    "| April16  | percentPPI   | 1254.5  | 0.761      | False       | 0.04            | 0.758       | -0.14       |\n",
-    "| June26   | reactionTime | 1575.5  | 0.453      | False       | -0.08           | 0.451       | 0.28        |\n",
-    "| June26   | peakTime     | 1183.5  | 0.080      | False       | 0.19            | 0.080       | -0.83       |\n",
-    "| June26   | difference   | 1277.5  | 0.266      | False       | 0.12            | 0.265       | -1.11       |\n",
-    "| June26   | peakValue    | 2317.0  | 1.33e-07   | True        | -0.59           | 1.31e-07    | 82.86       |\n",
-    "| June26   | PTPA         | 2319.0  | 1.24e-07   | True        | -0.59           | 1.22e-07    | 82.51       |\n",
-    "| June26   | PTTA         | 2343.5  | 5.39e-08   | True        | -0.61           | 5.30e-08    | 75.20       |\n",
-    "| June26   | RMS          | 2205.0  | 4.50e-06   | True        | -0.51           | 4.43e-06    | 27.42       |\n",
-    "| June26   | tau          | 619.0   | 2.58e-07   | True        | 0.58            | 2.53e-07    | -42.61      |\n",
-    "| June26   | AUC          | 1869.0  | 1.17e-02   | True        | -0.28           | 1.16e-02    | 4660.23     |\n",
-    "| June26   | percentPPI   | 1254.5  | 0.761      | False       | 0.04            | 0.758       | -0.14       |\n",
-    "| May20    | reactionTime | 1113.0  | 0.030      | True        | 0.24            | 3.00e-02    | -0.42       |\n",
-    "| May20    | peakTime     | 917.5   | 0.00062    | True        | 0.37            | 6.10e-04    | -1.31       |\n",
-    "| May20    | difference   | 1191.0  | 0.099      | False       | 0.18            | 0.099       | -0.89       |\n",
-    "| May20    | peakValue    | 2794.5  | 2.23e-16   | True        | -0.92           | 2.17e-16    | 63.35       |\n",
-    "| May20    | PTPA         | 2796.5  | 2.01e-16   | True        | -0.92           | 1.96e-16    | 63.26       |\n",
-    "| May20    | PTTA         | 2783.0  | 4.01e-16   | True        | -0.91           | 3.91e-16    | 57.83       |\n",
-    "| May20    | RMS          | 2531.5  | 4.31e-11   | True        | -0.74           | 4.22e-11    | 20.13       |\n",
-    "| May20    | tau          | 608.0   | 1.79e-07   | True        | 0.58            | 1.76e-07    | -50.30      |\n",
-    "| May20    | AUC          | 2040.0  | 3.53e-04   | True        | -0.40           | 3.49e-04    | 3762.50     |\n",
-    "| May20    | percentPPI   | 1254.5  | 0.761      | False       | 0.04            | 0.758       | -0.14       |\n",
+    "| Date     | Variable      | Stat    | p-value    | Effect Strength | Dunn p      | Mean Diff   |\n",
+    "|----------|--------------|---------|------------|-----------------|-------------|-------------|\n",
+    "| April16  | reactionTime | 574.5   | 4.73e-08   | 0.61            | 4.65e-08    | -1.05       |\n",
+    "| April16  | difference   | 2104.0  | 6.94e-05   | -0.44           | 6.86e-05    | 1.78        |\n",
+    "| April16  | peakValue    | 2881.0  | 2.32e-18   | -0.98           | 2.26e-18    | 61.08       |\n",
+    "| April16  | PTPA         | 2877.0  | 2.88e-18   | -0.97           | 2.81e-18    | 60.20       |\n",
+    "| April16  | PTTA         | 2885.0  | 1.87e-18   | -0.98           | 1.82e-18    | 55.28       |\n",
+    "| April16  | RMS          | 2872.0  | 3.78e-18   | -0.97           | 3.68e-18    | 25.17       |\n",
+    "| April16  | tau          | 554.0   | 2.83e-08   | 0.62            | 2.78e-08    | -21.62      |\n",
+    "| April16  | AUC          | 2802.0  | 1.52e-16   | -0.92           | 1.48e-16    | 5809.32     |\n",
+    "| June26   | peakValue    | 2317.0  | 1.33e-07   | -0.59           | 1.31e-07    | 82.86       |\n",
+    "| June26   | PTPA         | 2319.0  | 1.24e-07   | -0.59           | 1.22e-07    | 82.51       |\n",
+    "| June26   | PTTA         | 2343.5  | 5.39e-08   | -0.61           | 5.30e-08    | 75.20       |\n",
+    "| June26   | RMS          | 2205.0  | 4.50e-06   | -0.51           | 4.43e-06    | 27.42       |\n",
+    "| June26   | tau          | 619.0   | 2.58e-07   | 0.58            | 2.53e-07    | -42.61      |\n",
+    "| June26   | AUC          | 1869.0  | 1.17e-02   | -0.28           | 1.16e-02    | 4660.23     |\n",
+    "| May20    | reactionTime | 1113.0  | 0.030      | 0.24            | 3.00e-02    | -0.42       |\n",
+    "| May20    | peakTime     | 917.5   | 0.00062    | 0.37            | 6.10e-04    | -1.31       |\n",
+    "| May20    | peakValue    | 2794.5  | 2.23e-16   | -0.92           | 2.17e-16    | 63.35       |\n",
+    "| May20    | PTPA         | 2796.5  | 2.01e-16   | -0.92           | 1.96e-16    | 63.26       |\n",
+    "| May20    | PTTA         | 2783.0  | 4.01e-16   | -0.91           | 3.91e-16    | 57.83       |\n",
+    "| May20    | RMS          | 2531.5  | 4.31e-11   | -0.74           | 4.22e-11    | 20.13       |\n",
+    "| May20    | tau          | 608.0   | 1.79e-07   | 0.58            | 1.76e-07    | -50.30      |\n",
+    "| May20    | AUC          | 2040.0  | 3.53e-04   | -0.40           | 3.49e-04    | 3762.50     |\n",
     "\n",
     "**Interpretation:**\n",
     "- **Strength metrics** (peakValue, PTPA, PTTA, RMS, AUC) show large and highly significant sex differences on all dates (higher in males).\n",
     "- **Females have higher tau**; males have higher peakValue, RMS, and AUC.\n",
-    "- **Reaction metrics** (reactionTime, peakTime, difference) show less consistent and weaker sex differences, mostly significant on April16 and May20.\n",
+    "- **Reaction metrics** (reactionTime, peakTime, difference) show significant sex differences on April16 and May20.\n",
     "- All results are robust to non-normality and outliers."
    ]
   },
@@ -2428,8 +2420,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
